Bug 62478 - CRASH when FILEOPEN Tools - Options - Base - Databases
Summary: CRASH when FILEOPEN Tools - Options - Base - Databases
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: Other All
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.1.0
Keywords:
: 57858 (view as bug list)
Depends on:
Blocks: mab4.1
  Show dependency treegraph
 
Reported: 2013-03-18 16:04 UTC by Rainer Bielefeld Retired
Modified: 2013-04-05 11:30 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
backtrace from SIGABRT (12.32 KB, text/plain)
2013-03-18 18:44 UTC, Terrence Enger
Details
console + bt with symbols on master sources (12.35 KB, text/plain)
2013-03-18 20:11 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2013-03-18 16:04:03 UTC
Steps how to reproduce [Reproducible] with parallel Dev-installation of  "Version 4.1.0.0.alpha0+ (Build ID: 094bab7f9097fba62800d3dd578bd42640d8c6e2) TinderBox: Win-x86@6, Branch:master, Pull Time: 2013-03-18_01:35:56" ENGLISH UI / German Locale on German WIN7 Home Premium (64bit) with LODev/4 Masters User Profile:

1. Launch LibO
2. From LibO Start Center: Menu 'Tools -> Options -> Expand LibreOfficeDev Base'
3. Click 'Databases'
   > Crash
Comment 1 Rainer Bielefeld Retired 2013-03-18 16:17:28 UTC
To reproduce the crash with server installation of  "Version 4.1.0.0.alpha0+ (Build ID: 576da8db5577f84d9c7e0e40ef3e166a7938c98) TinderBox: Win-x86@6, Branch:master, Pull Time: 2013-02-11_23:54:45" ENGLISH UI / German Locale  on German WIN7 Home Premium (64bit) with own separate User Profile:

I first had to open a .odb (for example sample database in test kit Attachment 75215 [details] for Bug 60166) from file menu. Then proceeding corresponding to report reproduces crash.
Same with Version 4.1.0.0.alpha0+ (Build ID: 7ee2857ab5daa791d36615d149ee562020b883e)
TinderBox: Win-x86@7-MinGW, Branch:master, Time: 2013-02-17_08:19:43

No crash  with server installation of  "Version 4.1.0.0.alpha0+ (Build ID: 2823789bec0c029d9714aff0ed65923e23177ef) TinderBox: Win-x86@6, Branch:master, Pull Time: 2013-01-24_22:52:49" ENGLISH UI / German Locale  on German WIN7 Home Premium (64bit) with LO41 Masters User Profile
Comment 2 Terrence Enger 2013-03-18 18:44:24 UTC
Created attachment 76706 [details]
backtrace from SIGABRT
Comment 3 Terrence Enger 2013-03-18 18:46:25 UTC
I see this in master commit 51a18f9, pulled around 2013-03-14 17:40 UTC.

This is the same assertion that was raised in fdo##61688 "SIGABRT with
debug build in VclBuilder::handleChild", and it results from the same line
of "application" code in VclBuilder::handleChild.  Of course, the call
stack beyond that function is quite different.  Perhaps this bug should be
marked duplicate of fdo#61688?

@Rainer,

Is it the case that the failing build is configured with --enable-dbgutil?
I think that that is implicated in the crash, although in comment 6 to
fdo#68688 Juilen Nabet indicates that one build configured that way did not
crash.

@Julien,

What does your "not crashing over there" build do on this bug?
Comment 4 Terrence Enger 2013-03-18 18:47:44 UTC
My crash was on Linux 32-bit, so setting platform ALL.
Comment 5 Rainer Bielefeld Retired 2013-03-18 18:49:09 UTC
@Terrence Enger (In reply to comment #3)
Where can I check that?
Comment 6 Terrence Enger 2013-03-18 18:54:18 UTC
@Rainer,

In the top-level directory of the build, `cat autogen.lastrun`.
Comment 7 Julien Nabet 2013-03-18 20:11:44 UTC
Created attachment 76711 [details]
console + bt with symbols on master sources

On pc Debian x86-64 with master sources updated yesterday (commit 84e4bf884718fcca8934b81b4037e063cf08c71e), I reproduced the crash.

I attached bt.
Comment 8 Julien Nabet 2013-03-18 20:22:09 UTC
Caolán: you might be interested in this one too, "cui/source/options/dbregister.cxx" is in the bt
Comment 9 Julien Nabet 2013-03-18 20:39:20 UTC
At least, this naive patch prevents from the crash on my laptop.

diff --git a/cui/source/options/dbregister.cxx b/cui/source/options/dbregister.cxx
index dfa2def..1d86dc1 100644
--- a/cui/source/options/dbregister.cxx
+++ b/cui/source/options/dbregister.cxx
@@ -312,7 +312,7 @@ IMPL_LINK_NOARG(DbRegistrationOptionsPage, EditHdl)
 
 IMPL_LINK( DbRegistrationOptionsPage, HeaderSelect_Impl, HeaderBar*, pBar )
 {
-    if ( pBar && pBar->GetCurItemId() != ITEMID_TYPE )
+    if ( !pBar || pBar->GetCurItemId() != ITEMID_TYPE )
         return 0;
 
     HeaderBarItemBits nBits = pBar->GetItemBits(ITEMID_TYPE);
@@ -341,7 +341,7 @@ IMPL_LINK( DbRegistrationOptionsPage, HeaderSelect_Impl, HeaderBar*, pBar )
 
 IMPL_LINK( DbRegistrationOptionsPage, HeaderEndDrag_Impl, HeaderBar*, pBar )
 {
-    if ( pBar && !pBar->GetCurItemId() )
+    if ( !pBar || !pBar->GetCurItemId() )
         return 0;
 
     if ( !pBar->IsItemMode() )
Comment 10 Rainer Bielefeld Retired 2013-03-19 06:41:01 UTC
(In reply to comment #6)
I am a USER, no idea what we are talking about. Is that really something I can access in a tinderbox build?
Comment 11 Julien Nabet 2013-03-19 09:01:48 UTC
(In reply to comment #6)
> @Rainer,
> 
> In the top-level directory of the build, `cat autogen.lastrun`.
Hope I don't misunderstand but if Rainer took Win-x86@6, it must correspond to this config:
http://dev-builds.libreoffice.org/daily/master/Win-x86@6/current/master~2013-03-19_02.28.02_build_info.txt
I don't see any dgb-util or other debug on this file.
Also, I read that LO in Windows (32 or 64 bits) is always 32bits.
Comment 12 Rainer Bielefeld Retired 2013-03-31 07:57:56 UTC
*** Bug 57858 has been marked as a duplicate of this bug. ***
Comment 13 Lionel Elie Mamane 2013-04-04 10:20:04 UTC
@caolanm: this looks like it could be related to:


commit 705b60f94ea5721662811501594d13d1ad925eb3
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Fri Feb 8 16:48:34 2013 +0000

    move paths option page .ui to cui and adapt code
    
    Change-Id: I60063a0d101ef47271194e45ee59f9ff622a4f1c


There, you replaced (in the first code location mentioned in comment 9) pHeaderBar by pBar. I don't quite understand this change, but it smells like pBar is NULL (or otherwise invalid) when pHeaderBar was not. Any insight on that?
Comment 14 Caolán McNamara 2013-04-05 11:18:41 UTC
yeah, this is my regression
Comment 15 Commit Notification 2013-04-05 11:25:58 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=944bc0a3a33f21f59cb51a4391687ff1fe01dae9

Resolves: fdo#62478 crash on tools->options->base->databases



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.