Resolves: fdo#62478 crash on tools->options->base->databases

Change-Id: Ic24c5f14f66a4059ce653df34321352adb50496f